# icl

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakeLists.txt_agni  CMakeLists.txt_ubuntu  CONTINUE.md  Changelog.md  LICENSE  Makefile.am  Makefile.doc.am  Makefile.pch  Qt.packageVar  README.md  TODO  TODO.md  TODO.txt  VERSION.sh  about.html  add-namespaces.cpp  apps-ported.md  appveyor.yml  bootstrap.sh  cmake_howto.txt  configure  configure-sample-file.cfg  configure.ac  configure.ac-i686  configure.ac-x86_64  continue-transitioning.md  createFolder  debian-package.cfg  demos-ported.md  deprecated.md  doxyfile  doxyfile.in  filter-benchmarks-and-tests-plan.md  filters-overview.md  (+30 more)
ICLAlgorithms/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLAlgorithms/doc/: doxyfile
ICLAlgorithms/examples/: configurable-info.cpp  generic-surf-demo.cpp  hough-line-demo.cpp  interactive-hough-line-demo.cpp  interactive-template-matching-demo.cpp  interactive_template_matching.cpp  llm-1D-demo.cpp  llm-2D-demo.cpp  llm-demo-1D.cpp  llm-demo-2D.cpp  lma-demo.cpp  makeVar  softposit-demo.cpp  sq-fitting-demo.cpp  svs-create-ini-file.cpp  svs-online-demo.cpp  svs-test.cpp  template-matching-demo.cpp  template-matching-test.cpp  template_matching_test.cpp
ICLAlgorithms/lib/: makeVar
ICLAlgorithms/src/: GenericSurfDetector.cpp  HoughLine.cpp  HoughLineDetector.cpp  LLM.cpp  LMA.cpp  OpenCVSurfDetector.cpp  OpenSurfDetector.cpp  SOM.cpp  SQFitter.cpp  SVS.cpp  SoftPosit.cpp  TemplateTracker.cpp  UsefulFunctions.cpp  ViewBasedTemplateMatcher.cpp  iclHoughLine.cpp  iclHoughLine.h  iclHoughLineDetector.cpp  iclHoughLineDetector.h  iclSOM.cpp  iclSOM.h  iclSOM2D.h  iclSVS.cpp  iclSVS.h  iclUsefulFunctions.cpp  iclUsefulFunctions.h  iclViewBasedTemplateMatcher.cpp  iclViewBasedTemplateMatcher.h
ICLAlgorithms/test/: runner.cpp  test-template.cpp
ICLBlob/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLBlob/doc/: doxyfile
ICLBlob/examples/: FunctionCallBenchmark.cpp  blobtest.cpp  blobtracker-benchmark.cpp  blobtrackerbench.cpp  blobtrackertest.cpp  boundary_test.cpp  corner-detection-css-demo.cpp  flood-filler-demo.cpp  hungarianAlgorithm.cpp  interactive-vector-tracker-benchmark.cpp  makeVar  mean-shift-demo.cpp  mean-shift-online-demo.cpp  online-region-detection-demo.cpp  rbbf_test.cpp  rd_test.cpp  region-based-blob-finder-test.cpp  region-detection-demo.cpp  region-detector-test.cpp  region-inspector-demo.cpp  region-inspector.cpp  regioninspector.cpp  simple-blob-searcher-demo.cpp  simple-blob-searcher-test.cpp  tangible-grains-benchmark.cpp  tangible-grains-demo.cpp  tei2008_bench.cpp  tei2008_eval.cpp  vector-tracker-demo.cpp  vqdemo.cpp
ICLBlob/src/: BlobData.cpp  BlobData.h  ColorBlobSearcher.cpp  ColorBlobSearcher.h  DefaultBlobSearcher.cpp  DefaultBlobSearcher.h  DefaultColorBlobSearcher.cpp  DefaultColorBlobSearcher.h  Extrapolator.cpp  Extrapolator.h  FMCreator.cpp  FMCreator.h  FastMedianList.h  FloodFiller.cpp  FoundBlob.h  HungarianAlgorithm.cpp  HungarianAlgorithm.h  ICLBlobData.cpp  ICLBlobData.h  ICLColorBlobSearer.cpp.h  ICLColorBlobSearer.h  ICLDefaultColorBlobSearer.cpp.h  ICLDefaultColorBlobSearer.h  (+121 more)
ICLCC/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar  makefile
ICLCV/: CMakeLists.txt
ICLCore/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLFilter/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLGeom/: CMakeLists.txt  Makefile.am  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  continue-raytracing.md  gl-pipeline-rework-plan.md  makeVar  todo.txt
ICLIO/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLMarkers/: CMakeLists.txt
ICLMath/: CMakeLists.txt
ICLOpenCV/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am
ICLPhysics/: CMakeLists.txt
ICLQt/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLQuick/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
ICLUtils/: CMakeLists.txt  Makefile.bin.am  Makefile.lib.am  Makefile.test.am  makeVar
benchmarks/: CMakeLists.txt  bench-core.cpp  bench-cv.cpp  bench-filter.cpp  bench-fixedmatrix.cpp  bench-xml.cpp  bench-yaml.cpp  icl-benchmarks.cpp  meson.build
cmake/: CMakeLists.txt  ICLConfig.cmake.in  ICLConfigVersion.cmake.in  Info.plist.in
doc/: CMakeLists.txt  bottom.html  fix-doc-screen-shot-edges.cpp  index.html  index.html.in  logo.html  menu.html-template  menu.htmltemplate  menuStyle.css  meson-cheatsheet.md  style.css  top.html  top.html.in
scripts/: CMakeLists.txt  CMakeLists.txt.in  adapt-license.sh  add_license.sh  cl2header.py  compare-grid.sh  compileICL.sh  config-generator.sh  configure-all-ag-ami-32bit-on-64bit-machine.sh  configure-all-ag-ami.sh  configure-all-ag-ni-debug.sh  configure-all-ag-ni-native.sh  configure-all-ag-ni-stable.sh  configure-all-ag-ni.sh  configure-all-gzi.sh  configure-cluster.sh  configure-config-agni-full-debug.cfg  configure-config-agni-full-release.cfg  configure-eriedenk.sh  configure-jenkins-debug.cfg  create-doc-index.sh  dedent-namespaces.py  fix-install-permissions-agni.sh  fix-matrix-indexing.py  fix-matrix-indexing2.py  fix-orphan-braces.py  fuse-namespaces.py  gen-meson-sources.py  icl-cmake-deprecated.sh  icl-cmake.sh  icl-configure-demo-config.cfg  icl-configure.sh  icl-create-cmake-project.in  icl-create-project  icl-create-project-with-tests  icl-create-project.in  icl-create-video.sh  icl-homebrew-test.sh  icl-make  icl-make.in  (+12 more)
tests/: CMakeLists.txt  icl-tests.cpp  meson.build  test-any-map.cpp  test-assign.cpp  test-auto-parse.cpp  test-core.cpp  test-filter.cpp  test-math.cpp  test-plugin-registry.cpp  test-prop-constraints.cpp  test-quick-compose.cpp  test-quick-context.cpp  test-quick-create.cpp  test-quick-draw.cpp  test-quick-filter.cpp  test-quick-io.cpp  test-quick-math.cpp  test-utils.cpp  test-xml.cpp  test-yaml.cpp
(+8964 files in other folders)
